--- a/src/index.css
+++ b/src/index.css
@@ -155,8 +155,6 @@ fieldset>legend {
   border-color: purple;
   background-image: radial-gradient(purple, black);
   margin: auto;
-
-
 }
 
 .lowerFieldSet>button {
@@ -340,7 +338,7 @@ button {
   padding: 10px;
   width: 100%;
   flex-direction: column;
-  justify-content: center;
+  justify-content: top;
   align-items: center;
   flex-wrap: wrap;
   border-radius: 50px;
@@ -377,11 +375,15 @@ button {
 
 .resultsGameScore {
   display: flex;
+  font-family: LEDFont;
+  font-size: 50px;
+  line-height: 10px;
   flex-direction: row;
   justify-content: center;
   vertical-align: center;
   border: solid;
   padding: 10px;
+  margin: 20px;
 }
 
 .resultsGameScore>div {
