--- a/src/index.css
+++ b/src/index.css
@@ -66,13 +66,13 @@ body {
 header>h1 {
   font-family: "Neonderthaw", "Arial";
   font-size: 60px;
-  text-align: center;
+  position: relative;
+  text-align: left;
+
   color: pink;
   background: none;
   padding: 20px;
   margin: 0;
-  width: 100%;
-  height: 100%;
   animation-duration: 6s;
   animation-timing-function: linear;
   animation-iteration-count: infinite;
@@ -366,8 +366,8 @@ button {
 
 .resultsMain {
   display: flex;
-  padding: 10px;
-  width: 100%;
+  margin: auto;
+  width: fit-content;
   flex-direction: column;
   justify-content: top;
   align-items: center;
@@ -375,10 +375,9 @@ button {
   border-radius: 50px;
   font-size: 20px;
   background-image: radial-gradient(black, purple);
-  padding: 20px;
-  margin: 20px;
   align-content: center;
   border: solid;
+  padding: 20px;
 }
 
 .resultsTable {
